build_errors.log
cargo :     Checking f
antasmagorie v0.1.0 (E
:\Projects\Fantasmagor
ieRust\crates\fantasma
gorie)
発生場所 行:1 文字:1
+ cargo check 2>&1 | O
ut-File -Encoding utf8
 build_errors.log
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng fa...\fantasma    
gorie):String) []    ,
 RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
error[E0432]: unresolv
ed import `crate::core
::context`
 --> crates\fantasmago
rie\src\widgets\traits
.rs:1:18
  |
1 | use crate::core::c
ontext::UIContext;
  |                  ^
^^^^^^ could not find 
`context` in `core`

error[E0432]: unresolv
ed import `crate::core
::context`
 --> crates\fantasmago
rie\src\widgets\window
.rs:1:18
  |
1 | use crate::core::c
ontext::UIContext;
  |                  ^
^^^^^^ could not find 
`context` in `core`

error[E0432]: unresolv
ed import `crate::core
::context`
 --> crates\fantasmago
rie\src\widgets\button
.rs:1:18
  |
1 | use crate::core::c
ontext::UIContext;
  |                  ^
^^^^^^ could not find 
`context` in `core`

error[E0432]: unresolv
ed import `crate::core
::context`
 --> crates\fantasmago
rie\src\widgets\label.
rs:1:18
  |
1 | use crate::core::c
ontext::UIContext;
  |                  ^
^^^^^^ could not find 
`context` in `core`

error[E0432]: unresolv
ed import `crate::core
::context`
 --> crates\fantasmago
rie\src\widgets\slider
.rs:1:18
  |
1 | use crate::core::c
ontext::UIContext;
  |                  ^
^^^^^^ could not find 
`context` in `core`

warning: unused import
: `bitflags::bitflags`
 --> crates\fantasmago
rie\src\core\types.rs:
1:5
  |
1 | use bitflags::bitf
lags;
  |     ^^^^^^^^^^^^^^
^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part of
 `#[warn(unused)]`) on
 by default

warning: unused import
: `super::core::types:
:Color`
 --> crates\fantasmago
rie\src\widgets\mod.rs
:1:5
  |
1 | use super::core::t
ypes::Color;
  |     ^^^^^^^^^^^^^^
^^^^^^^^^^^

warning: unused variab
le: `store`
  --> crates\fantasmag
orie\src\render\render
er.rs:25:50
   |
25 |     pub fn render
(&mut self, gl: &glow:
:Context, store: &Node
Store, screen_width: f
32, screen_height: f32
) {
   |                  
                      
          ^^^^^ help: 
if this is intentional
, prefix it with an un
derscore: `_store`
   |
   = note: `#[warn(unu
sed_variables)]` (part
 of `#[warn(unused)]`)
 on by default

For more information a
bout this error, try `
rustc --explain E0432`
.
warning: `fantasmagori
e` (lib) generated 3 w
arnings
error: could not compi
le `fantasmagorie` (li
b) due to 5 previous e
rrors; 3 warnings emit
ted
